# housing_trend_discovery

./: .gitignore  README.md  delete_postgres_state.sh  postgres.yml  pyproject.toml
api_server/: pyproject.toml
api_server/api_server/: README.md  main.py
house_trend_discovery/: __init__.py  get_logger.py
house_trend_discovery/data_gen/: __init__.py  create_db_engine.py  gen_county_dataset.py  models.py
house_trend_discovery/data_gen/dataset/: dataset.py
house_trend_discovery/data_gen/parsers/: houseinfo.py  kingcounty.py  parser.py  utils.py
house_trend_discovery/data_gen/scraper/: base.py
house_trend_discovery/data_gen/scraper/scraper/spiders/: house_info_getter.py  houseinfo.py
puppeteer_crawler/: .gitignore  base.js  houseinfo.js  index.js  kingcounty.js
