[tool.poetry]
name = "house-trend-discovery"
version = "0.1.0"
description = ""
authors = ["niole <niolenelson@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
click = "^8.1.7"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
latloncalc = "^1.5.6"
pydantic-extra-types = "^2.6.0"
scrapy = "^2.11.1"
selenium = "^4.18.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
